@@ -3,6 +3,6 @@
 #ifndef kmversion_h
 #define kmversion_h
 
-#define KMAIL_VERSION "0.7.2"
+#define KMAIL_VERSION "0.7.3"
 
 #endif /*kmversion_h*/
